syntax = "proto3";

package school;
option go_package = "./proto";

// School Service
service SchoolService {
  rpc GetSchool(GetSchoolRequest) returns (GetSchoolResponse);
  rpc ValidateSchool(ValidateSchoolRequest) returns (ValidateSchoolResponse);
}

message School {
  string id = 1;
  string registration_number = 2;
  string name = 3;
  string address = 4;
  string phone = 5;
  string email = 6;
  string created_at = 7;
  string updated_at = 8;
}

message GetSchoolRequest {
  string id = 1;
}

message GetSchoolResponse {
  School school = 1;
  bool found = 2;
}

message ValidateSchoolRequest {
  string id = 1;
}

message ValidateSchoolResponse {
  bool exists = 1;
  string name = 2;
}
